fixed size on mobile phones

--- a/static/style.css
+++ b/static/style.css
@@ -2,8 +2,8 @@ body            { font-family: sans-serif; background: rgb(46, 46, 49); }
 a, h1, h2       { color: #3ca80e; }
 h1, h2          { text-align: center}
 h1,             { font-family: 'Georgia', serif; margin: 0; }
-h1              { font-size: 10.2em; }
-h2              { font-size: 3.2em; }
+h1              { font-size: 4.0em; }
+h2              { font-size: 2.7em; }
 
 .page           { margin: 2em auto; width: 35em; border: 5px solid rgb(204, 204, 204);
                   padding: 0.8em; background: white; }
@@ -48,7 +48,7 @@ button {
 	padding:13px 32px;
 	text-decoration:none;
   text-shadow:0px 1px 0px #3d768a;
-  width: 200px;
+  width: 150px;
   height: 100px;
 }
 button:hover {
